--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -69,4 +69,11 @@
     <string name="styles">Styl generowania grafik</string>
     <string name="want_to_assign">Przydzielić obraz do kontaktu %s?</string>
 
+    <!-- Upgrade Teaser -->
+    <string name="upgrade_teaser_1">Du willst Backups?</string>
+    <string name="upgrade_teaser_2">Du willst Bildeinstellungen?</string>
+    <string name="upgrade_teaser_3">Du willst neue Features früher erhalten?</string>
+    <string name="upgrade_teaser_4">Du willst Verbesserungen früher erhalten?</string>
+    <string name="upgrade_teaser_5">Du willst keine Werbeeinblendungen mehr sehen?</string>
+
 </resources>
