--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -70,10 +70,16 @@
     </string>
 
     <!-- Settings - Styles -->
-
     <string name="styles">Стили</string>
     <string name="shrinking_plates">Сжатие</string>
     <string name="structured_discs">Structured Discs</string>
     <string name="pixel_matrix">Pixel Matrix</string>
+
+    <!-- Upgrade Teaser -->
+    <string name="upgrade_teaser_1">Want backups?</string>
+    <string name="upgrade_teaser_2">Want style settings?</string>
+    <string name="upgrade_teaser_3">Want new features sooner?</string>
+    <string name="upgrade_teaser_4">Want improvements sooner?</string>
+    <string name="upgrade_teaser_5">Want to get rid of ads?</string>
 
 </resources>
