--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,8 +52,8 @@
     <string name="previous_image">Imagen anterior</string>
     <string name="next_image">Siguiente imagen</string>
 
-    <string name="all_contacts">Todos los contactos</string>
-    <string name="auto_experimental_long">
+    <string name="button_all_contacts">Todos los contactos</string>
+    <string name="dialog_msg_missing">
         Las diferentes versiones de Android y algunas aplicaciones
         pueden almacenar imágenes en una forma única.
         Es poco probable, pero no imposible,
@@ -67,11 +67,11 @@
         Ocurrió un error mientras se asignaba la imagen al contacto.
     </string>
     <string name="error_saving">Ocurrió un error guardando la imagen.</string>
-    <string name="please_note">Tenga En Cuenta</string>
+    <string name="dialog_title_please_note">Tenga En Cuenta</string>
     <string name="overwrite_all_or_only">
        ¿Quieres sobrescribir todas las imágenes o solamente para generar contactos sin una imagen?
     </string>
-    <string name="confirm_all">
+    <string name="dialog_msg_all_contacts">
         Por favor, confirme que desea sobrescribir todas las imágenes.
     </string>
 
